Updated frontend visualization with text box for custom input and live testing

--- a/rendering/index.html
+++ b/rendering/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="top-row">
-			<h1 id="label">N/A</h1>
+			<h1 id="label"></h1>
 		  </div>
 		<div class="row">
 			<div class="column">
@@ -15,7 +15,7 @@
 			</div>
 			<div class="column">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in ultricies urna, id venenatis mi. Morbi justo tortor, finibus eu finibus vel, auctor non quam. Curabitur massa ipsum, venenatis sit amet eros ac, semper varius tellus. Nullam scelerisque, lectus et rutrum placerat, lacus risus maximus augue, in dictum felis nisl nec massa. Nullam pulvinar ac libero sed dignissim. Integer vulputate eget nunc quis feugiat. Aenean at est ut quam rhoncus feugiat ut eu lacus. Sed iaculis sem quam, ut mattis nisl auctor et. Phasellus at augue quis erat gravida finibus at vitae turpis.				</p>
-				<form id="textArea">
+				<form id="inputForm">
 					<br>
 					<textarea id="message" name="message" rows="5" cols="80"></textarea>
 					<br> <br>
