--- a/rendering/index.html
+++ b/rendering/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My first three.js app</title>
+		<title>Speech to Sign</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
@@ -14,10 +14,14 @@
 				<div id="container"></div>
 			</div>
 			<div class="column">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in ultricies urna, id venenatis mi. Morbi justo tortor, finibus eu finibus vel, auctor non quam. Curabitur massa ipsum, venenatis sit amet eros ac, semper varius tellus. Nullam scelerisque, lectus et rutrum placerat, lacus risus maximus augue, in dictum felis nisl nec massa. Nullam pulvinar ac libero sed dignissim. Integer vulputate eget nunc quis feugiat. Aenean at est ut quam rhoncus feugiat ut eu lacus. Sed iaculis sem quam, ut mattis nisl auctor et. Phasellus at augue quis erat gravida finibus at vitae turpis.				</p>
+				<form method="POST" action="/" enctype="multipart/form-data">
+					<input type="file" name="file" accept=".wav, .mp3">
+					<br>
+					<input type="submit" value="Upload and Transcribe">
+				</form>
 				<form id="inputForm">
 					<br>
-					<textarea id="message" name="message" rows="5" cols="80"></textarea>
+					<textarea id="message" name="message" rows="20" cols="80"></textarea>
 					<br> <br>
 					<input type="submit" value="Submit">
 				</form>
