modified index.html, added favicon.cio
changed favicon to our logo

--- a/rendering/index.html
+++ b/rendering/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Speech to Sign</title>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
